--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12265,7 +12265,7 @@ input:-ms-input-placeholder {
   display: inline-block;
   height: 50px;
   width: 50px;
-  background: #1c3ce3;
+  background: #DA3D3D;
   border-radius: 50%;
   color: #ffffff;
   font-weight: 500;
